--- a/sql/mysql-access.ipynb
+++ b/sql/mysql-access.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 30,
    "id": "e3b0b88a-3ab1-4526-96a3-b167c0b732da",
    "metadata": {},
    "outputs": [],
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "45591de3-a2d9-4912-a882-ca50f3acbe74",
    "metadata": {},
    "outputs": [
@@ -42,7 +42,7 @@
        "Engine(mysql+pymysql://piuser:***@localhost:3306/piit)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "49fa0324-16ef-4ba8-b340-1e17a5164ac0",
    "metadata": {},
    "outputs": [
@@ -130,7 +130,7 @@
        "5                 sys"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "1e19c5f0-e725-44a2-b218-799543af48df",
    "metadata": {},
    "outputs": [
@@ -180,34 +180,38 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>pstudents</td>\n",
+       "      <td>mtcars</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>sales</td>\n",
+       "      <td>pstudents</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>student_scores</td>\n",
+       "      <td>sales</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>student_totals</td>\n",
+       "      <td>student_scores</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>students</td>\n",
+       "      <td>student_totals</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>students2</td>\n",
+       "      <td>students</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>subject_avg_scores</td>\n",
+       "      <td>students2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
+       "      <td>subject_avg_scores</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
        "      <td>suroor</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -215,20 +219,21 @@
        "</div>"
       ],
       "text/plain": [
-       "       Tables_in_piit\n",
-       "0           employees\n",
-       "1         math_scores\n",
-       "2           pstudents\n",
-       "3               sales\n",
-       "4      student_scores\n",
-       "5      student_totals\n",
-       "6            students\n",
-       "7           students2\n",
-       "8  subject_avg_scores\n",
-       "9              suroor"
+       "        Tables_in_piit\n",
+       "0            employees\n",
+       "1          math_scores\n",
+       "2               mtcars\n",
+       "3            pstudents\n",
+       "4                sales\n",
+       "5       student_scores\n",
+       "6       student_totals\n",
+       "7             students\n",
+       "8            students2\n",
+       "9   subject_avg_scores\n",
+       "10              suroor"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "id": "d33877c3-9925-4f26-971b-fe5546bee69f",
    "metadata": {},
    "outputs": [],
@@ -249,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 35,
    "id": "079f073d-667d-46eb-a172-c6f428dddc6a",
    "metadata": {},
    "outputs": [
@@ -380,7 +385,7 @@
        "9          105      Emily     Brown         HR  48000.0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -401,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 36,
    "id": "16aae269-2866-4b5a-8eda-6fbf6d8cee7b",
    "metadata": {},
    "outputs": [],
@@ -412,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 37,
    "id": "0027b3bb-d593-43fa-9fd7-d69fdd383eb9",
    "metadata": {},
    "outputs": [
@@ -422,18 +427,18 @@
        "32"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mtcars.to_sql (name='mtcars', con=engine1, if_exists='append', index=False )"
+    "mtcars.to_sql (name='mtcars', con=engine1, if_exists='replace', index=False )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 38,
    "id": "db8452f2-2ca4-4515-ae28-6f8018e8bd19",
    "metadata": {},
    "outputs": [
@@ -525,7 +530,7 @@
        "10              suroor"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +544,9 @@
    "id": "737b4d16-8f12-4a03-8906-7bab75660837",
    "metadata": {},
    "source": [
-    "## Method 2 - Python pandas-sql Method"
+    "## Method 2 - Python pandas-sql Method\n",
+    "- this give practise of sql commands in python\n",
+    "- https://pypi.org/project/pandasql/"
    ]
   },
   {
@@ -550,14 +557,14 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from pandasql import sqldf\n",
+    "from pandasql import sqldf #this is the library which simulate sql commands in python\n",
     "import os\n",
     "from pydataset import data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 39,
    "id": "50862043-cd5a-49c2-9323-5252fb531c38",
    "metadata": {},
    "outputs": [],
@@ -567,18 +574,239 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "ebc586a4-6b96-425d-b339-352fe7b89bf4",
+   "execution_count": 43,
+   "id": "e4db45b6-add9-4f01-9846-242065fa3150",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>disp</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>drat</th>\n",
+       "      <th>wt</th>\n",
+       "      <th>qsec</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>am</th>\n",
+       "      <th>gear</th>\n",
+       "      <th>carb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Porsche 914-2</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120.3</td>\n",
+       "      <td>91</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>2.140</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Lotus Europa</th>\n",
+       "      <td>30.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>95.1</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>1.513</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ford Pantera L</th>\n",
+       "      <td>15.8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>351.0</td>\n",
+       "      <td>264</td>\n",
+       "      <td>4.22</td>\n",
+       "      <td>3.170</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ferrari Dino</th>\n",
+       "      <td>19.7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>175</td>\n",
+       "      <td>3.62</td>\n",
+       "      <td>2.770</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Maserati Bora</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>335</td>\n",
+       "      <td>3.54</td>\n",
+       "      <td>3.570</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 mpg  cyl   disp   hp  drat     wt  qsec  vs  am  gear  carb\n",
+       "Porsche 914-2   26.0    4  120.3   91  4.43  2.140  16.7   0   1     5     2\n",
+       "Lotus Europa    30.4    4   95.1  113  3.77  1.513  16.9   1   1     5     2\n",
+       "Ford Pantera L  15.8    8  351.0  264  4.22  3.170  14.5   0   1     5     4\n",
+       "Ferrari Dino    19.7    6  145.0  175  3.62  2.770  15.5   0   1     5     6\n",
+       "Maserati Bora   15.0    8  301.0  335  3.54  3.570  14.6   0   1     5     8"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Define SQL query function\n",
-    "pysqldf = lambda q: sqldf(q, globals())"
+    "mtcars2[mtcars2['gear']==5] #python"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
+   "id": "ebc586a4-6b96-425d-b339-352fe7b89bf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define SQL query function - this step \n",
+    "pysqldf = lambda q:sqldf(q, globals())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "daf76859-ceb7-41d5-b477-2d27b71ac60f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>disp</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>drat</th>\n",
+       "      <th>wt</th>\n",
+       "      <th>qsec</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>am</th>\n",
+       "      <th>gear</th>\n",
+       "      <th>carb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>2.620</td>\n",
+       "      <td>16.46</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>21.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>160.0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>2.875</td>\n",
+       "      <td>17.02</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cyl   disp   hp  drat     wt   qsec  vs  am  gear  carb\n",
+       "0  21.0    6  160.0  110   3.9  2.620  16.46   0   1     4     4\n",
+       "1  21.0    6  160.0  110   3.9  2.875  17.02   0   1     4     4"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pysqldf(\"select * from mtcars2 limit 2;\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
    "id": "1b85a990-d4dc-45d2-a83c-4b42096bd9be",
    "metadata": {},
    "outputs": [
@@ -715,13 +943,146 @@
        "5  30.4    4   95.1  113  3.77  1.513  16.90   1   1     5     2"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pysqldf(\"SELECT * FROM mtcars2 where mpg >25;\")"
+    "pysqldf(\"SELECT * FROM mtcars2 where mpg > 25;\") #sql style filtering"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "6f2849d5-c0e8-438f-a4e4-94e8a6573c28",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mpg</th>\n",
+       "      <th>cyl</th>\n",
+       "      <th>disp</th>\n",
+       "      <th>hp</th>\n",
+       "      <th>drat</th>\n",
+       "      <th>wt</th>\n",
+       "      <th>qsec</th>\n",
+       "      <th>vs</th>\n",
+       "      <th>am</th>\n",
+       "      <th>gear</th>\n",
+       "      <th>carb</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>26.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>120.3</td>\n",
+       "      <td>91</td>\n",
+       "      <td>4.43</td>\n",
+       "      <td>2.140</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>30.4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>95.1</td>\n",
+       "      <td>113</td>\n",
+       "      <td>3.77</td>\n",
+       "      <td>1.513</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>15.8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>351.0</td>\n",
+       "      <td>264</td>\n",
+       "      <td>4.22</td>\n",
+       "      <td>3.170</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>19.7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>145.0</td>\n",
+       "      <td>175</td>\n",
+       "      <td>3.62</td>\n",
+       "      <td>2.770</td>\n",
+       "      <td>15.5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>15.0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>301.0</td>\n",
+       "      <td>335</td>\n",
+       "      <td>3.54</td>\n",
+       "      <td>3.570</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    mpg  cyl   disp   hp  drat     wt  qsec  vs  am  gear  carb\n",
+       "0  26.0    4  120.3   91  4.43  2.140  16.7   0   1     5     2\n",
+       "1  30.4    4   95.1  113  3.77  1.513  16.9   1   1     5     2\n",
+       "2  15.8    8  351.0  264  4.22  3.170  14.5   0   1     5     4\n",
+       "3  19.7    6  145.0  175  3.62  2.770  15.5   0   1     5     6\n",
+       "4  15.0    8  301.0  335  3.54  3.570  14.6   0   1     5     8"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pysqldf(\"select * from mtcars2 where gear = 5;\")"
    ]
   },
   {
@@ -734,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 45,
    "id": "fbd88eb5-8eeb-4828-a37e-8b84fbf057e9",
    "metadata": {},
    "outputs": [],
@@ -745,7 +1106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 46,
    "id": "dc38c767-3b3c-4931-b529-ee547bbd09b4",
    "metadata": {},
    "outputs": [],
@@ -759,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 47,
    "id": "3f52951e-0da6-4a6c-92a7-ef971d3536ca",
    "metadata": {},
    "outputs": [
@@ -778,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 48,
    "id": "c8318e7c-4d29-4ab3-adb5-c829a766096a",
    "metadata": {},
    "outputs": [
@@ -799,7 +1160,7 @@
        "True"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +1178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 49,
    "id": "e3117cc2-1e44-4ffa-92a4-d6107c0cba2d",
    "metadata": {},
    "outputs": [
@@ -838,7 +1199,7 @@
        "True"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -878,7 +1239,10 @@
    "id": "81dd6b3a-7891-40e6-a543-34be8aa7e5e2",
    "metadata": {},
    "source": [
-    "## M5 : Web Interface"
+    "## M5 : Web Interface\n",
+    "- Mac (3-4) - Suroor,Rida Sunny,\n",
+    "- Win\n",
+    "- https://www.nexcess.net/help/mariadb-and-mysql-gui-tools/"
    ]
   },
   {
