--- a/py/stats/stats0.ipynb
+++ b/py/stats/stats0.ipynb
@@ -133,32 +133,37 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2278325f-34a1-4ecf-a808-110d9a05520e",
+   "metadata": {},
+   "source": [
+    "##  Lists"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "id": "e3d8cc86-78b7-4e7b-a0a5-4e646e8a61ef",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 6, 6, 6, 7, 8, 9, 10, 11] 13\n"
+     ]
     }
    ],
    "source": [
     "import statistics\n",
     "\n",
-    "data = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
-    "data"
+    "data = [1, 2, 3, 4, 5, 6,6,6, 7, 8, 9, 10,11] #list []\n",
+    "print(data, len(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "id": "2051e70d-e0af-4b1b-b86e-7be7e2a472a4",
    "metadata": {},
    "outputs": [
@@ -166,8 +171,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean: 5.5\n",
-      "Median: 5.5\n",
+      "Mean: 6\n",
+      "Median: 6\n",
       "Standard Deviation: 3.0276503540974917\n"
      ]
     }
@@ -189,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "id": "e6d7cf8f-9207-4e04-99ca-40a060831946",
    "metadata": {},
    "outputs": [
@@ -199,7 +204,7 @@
        "array([ 1,  2,  3,  4,  5,  6,  7,  8,  9, 10])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 47,
    "id": "a92a29f6-d013-4f7b-9eb8-da637e0c1463",
    "metadata": {},
    "outputs": [
@@ -244,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 48,
    "id": "dfd0e87e-1038-4c4b-ad5c-3b1155840d0b",
    "metadata": {},
    "outputs": [
@@ -276,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "id": "d54f87c9-fd9f-483f-90b4-6f0315e29c88",
    "metadata": {},
    "outputs": [
@@ -306,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 51,
    "id": "e3573484-e140-4d1e-8258-4b472b941b76",
    "metadata": {},
    "outputs": [
@@ -435,7 +440,7 @@
        "Hornet Sportabout     2  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,23 +454,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "id": "2ae71bc4-e0d5-41a6-a3c4-79b522824c8f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(20.090625000000003, 0.6723771376290805, -0.0220062914240855)"
+       "(20.090625000000003, 19.2, 0.6723771376290805, -0.0220062914240855)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df['mpg'].mean(), df['mpg'].skew(), df['mpg'].kurt()"
+    "df['mpg'].mean(), df['mpg'].median(), df['mpg'].skew(), df['mpg'].kurt()"
    ]
   },
   {
@@ -701,12 +706,13 @@
     }
    ],
    "source": [
-    "df.corr(method='pearson')"
+    "df.corr(method='pearson')\n",
+    "# for every unit increase in wt, mpg decrease more than for every unit increase in hp "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 55,
    "id": "e96f8243-6f96-455f-b344-4af94dc328db",
    "metadata": {},
    "outputs": [
@@ -716,7 +722,7 @@
        "<Axes: ylabel='mpg'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -737,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 56,
    "id": "51cf4fc7-4911-492d-b4cf-fe17caa0c440",
    "metadata": {},
    "outputs": [
@@ -747,7 +753,7 @@
        "<Axes: xlabel='mpg', ylabel='Count'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     },
