--- a/py/stats/stats3_sampling.ipynb
+++ b/py/stats/stats3_sampling.ipynb
@@ -124,6 +124,122 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "456aedc7-79f4-495b-bd12-66f331a5ce29",
+   "metadata": {},
+   "source": [
+    "## Categories\n",
+    "- without proportion\n",
+    "- with proportion\n",
+    "- categories: This list contains the distinct categorical values you want to sample from.\n",
+    "- proportions: This list contains the probability of selecting each corresponding category. The order of probabilities in proportions must match the order of categories in categories. Crucially, the sum of all probabilities in proportions must equal 1\n",
+    "- num_samples: This integer specifies how many samples you want to generate.\n",
+    "- np.random.choice(categories, size=num_samples, p=proportions):\n",
+    "    - The first argument (categories) is the array or list from which to sample.\n",
+    "    - size specifies the number of samples to draw.\n",
+    "    - p is the array of probabilities associated with each entry in categories.\n",
+    "- This method effectively creates a sample where the frequency of each category closely approximates the specified proportions, especially as num_samples increases due to the law of large numbers."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "685dd3de-510c-44d5-a1e5-568e69692da0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "# Define the categorical values (e.g., 'A', 'B', 'C')\n",
+    "categories = ['A', 'B', 'C']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "58768b21-1326-4e9e-95fc-24142f083b05",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the desired proportions for each category, # These proportions must sum to 1\n",
+    "proportions = [0.2, 0.5, 0.3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "4b7b55ea-c599-4914-bd7d-0724af78abb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define the number of samples to generate\n",
+    "num_samples = 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fb46451d-a7f0-4598-8967-4d474ce4ca08",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['B', 'C', 'A', 'A', 'A', 'B', 'A', 'B', 'B', 'C'], dtype='<U1')"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Generate the samples\n",
+    "sampled_data = np.random.choice(categories, size=num_samples, p=proportions)\n",
+    "sampled_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "ea65ba03-b239-4c5e-b21f-dbf55bac740c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sampled counts: Counter({'B': 4, 'A': 4, 'C': 2})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# You can then verify the proportions in your sampled data; # For example, count the occurrences of each category\n",
+    "from collections import Counter\n",
+    "counts = Counter(sampled_data)\n",
+    "print(f\"Sampled counts: {counts}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "333dd53b-6bce-4579-a3f1-fc179011ddc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Observed proportions: {'B': 0.4, 'C': 0.2, 'A': 0.4}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# And calculate the observed proportions\n",
+    "observed_proportions = {cat: count / num_samples for cat, count in counts.items()}\n",
+    "print(f\"Observed proportions: {observed_proportions}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "b7f206c7-056a-45be-b802-e46eb72f6771",
