--- a/py/stats/stats0.ipynb
+++ b/py/stats/stats0.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "cc832135-32b4-4874-a11c-f79d037c1359",
+   "metadata": {},
+   "source": [
+    "## Links\n",
+    "- https://docs.python.org/3/library/statistics.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "2af31bdc-4556-472a-be57-6b34bfeb34c5",
    "metadata": {},
    "source": [
