--- a/py/stats/stats4_htests.ipynb
+++ b/py/stats/stats4_htests.ipynb
@@ -5,7 +5,7 @@
    "id": "b9dbad90-a4e5-42ae-ba3f-1f899d68aee4",
    "metadata": {},
    "source": [
-    "## Statistics - 5 : Hypothesis Tests\n",
+    "## Statistics - 4 : Hypothesis Tests\n",
     "- this is one of the most important and practical topics in statistics for data analysts and data scientists.\n",
     "- Hypothesis testing is a statistical method used to make decisions or inferences about a population using sample data. It helps answer questions like:\n",
     "    - “Is the average income higher this year?”\n",
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "7c0f0af8-8e18-4e38-9745-8d670d9cc2b8",
    "metadata": {},
    "outputs": [
@@ -63,8 +63,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-statistic: -3.1431083036902714\n",
-      "P-value: 0.002633717685942027\n"
+      "T-statistic: -2.9226694510704303\n",
+      "P-value: 0.0049406788060285655\n"
      ]
     }
    ],
@@ -75,16 +75,20 @@
     "\n",
     "# Example: Independent Samples T-test\n",
     "group1 = np.random.normal(loc=50, scale=10, size=30)\n",
+    "#loc-mean, scale-std, size=samples\n",
     "group2 = np.random.normal(loc=55, scale=10, size=30)\n",
     "\n",
     "t_statistic, p_value = stats.ttest_ind(group1, group2)\n",
     "print(f\"T-statistic: {t_statistic}\")\n",
-    "print(f\"P-value: {p_value}\")"
+    "print(f\"P-value: {p_value}\")\n",
+    "# is pvalues < .05 : Yes: reject Ho in favor or Ha\n",
+    "#Ho : means of group1 = group2  - no difference\n",
+    "#Ha : means of group1 != group2 - significant difference"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e514b376-d5fc-43ca-97d6-c839d783179d",
    "metadata": {},
    "outputs": [
